Update links for Discord and TikTok

--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
           >
             <a
               class="btn tw-bg-[#7eFFce85] tw-shadow-lg tw-shadow-primary tw-transition-transform tw-duration-[0.3s] hover:tw-scale-x-[1.03]"
-              href=""
+              href="https://discord.oakgate.cc"
             >
               Discord
             </a>
             <a
               class="btn tw-flex tw-gap-2 !tw-bg-black !tw-text-white tw-transition-colors tw-duration-[0.3s] hover:!tw-bg-white hover:!tw-text-black"
-              href=""
+              href="https://tiktok.com/@sstemz"
             >
               <i class="bi bi-tiktok"></i>
               <span>TikTok</span>
